tests/ui/pattern/usefulness/impl-trait.stderr
error: unreachable pattern
  --> $DIR/impl-trait.rs:16:13
   |
LL |             _ => {}
   |             ^ matches no values because `Void` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types
note: the lint level is defined here
  --> $DIR/impl-trait.rs:4:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/impl-trait.rs:30:13
   |
LL |             _ => {}
   |             ^ matches no values because `Void` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/impl-trait.rs:44:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^ matches no values because `Void` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/impl-trait.rs:48:13
   |
LL |             None => {}
   |             ---- matches all the relevant values
LL |             _ => {}
   |             ^ no value can reach this

error: unreachable pattern
  --> $DIR/impl-trait.rs:58:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^ matches no values because `Void` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/impl-trait.rs:62:13
   |
LL |             None => {}
   |             ---- matches all the relevant values
LL |             _ => {}
   |             ^ no value can reach this

error: unreachable pattern
  --> $DIR/impl-trait.rs:75:9
   |
LL |         _ => {}
   |         ^ matches no values because `Void` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/impl-trait.rs:85:9
   |
LL |         _ => {}
   |         - matches any value
LL |         Some((a, b)) => {}
   |         ^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/impl-trait.rs:93:13
   |
LL |             _ => {}
   |             ^ matches no values because `Void` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/impl-trait.rs:104:9
   |
LL |         Some((a, b)) => {}
   |         ------------ matches all the relevant values
LL |         Some((mut x, mut y)) => {
   |         ^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/impl-trait.rs:123:13
   |
LL |             _ => {}
   |             - matches any value
LL |             Rec { n: 0, w: Some(Rec { n: 0, w: _ }) } => {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/impl-trait.rs:137:13
   |
LL |             _ => {}
   |             ^ matches no values because `SecretelyVoid` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/impl-trait.rs:150:13
   |
LL |             _ => {}
   |             ^ matches no values because `SecretelyDoubleVoid` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error[E0004]: non-exhaustive patterns: type `impl Copy` is non-empty
  --> $DIR/impl-trait.rs:22:11
   |
LL |     match return_never_rpit(x) {}
   |           ^^^^^^^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `impl Copy`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match return_never_rpit(x) {
LL +         _ => todo!(),
LL +     }
   |

error[E0004]: non-exhaustive patterns: type `T` is non-empty
  --> $DIR/impl-trait.rs:36:11
   |
LL |     match return_never_tait(x) {}
   |           ^^^^^^^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `T`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match return_never_tait(x) {
LL +         _ => todo!(),
LL +     }
   |

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0004`.
